# claude-leaderboard

./: .dockerignore  CLAUDE.md  Dockerfile  LICENSE.txt  README.md  claude_otel.db  main.py  pyproject.toml
docs/: 2025-01-09-claude-otel-leaderboard-design.md
docs/superpowers/plans/: 2025-01-09-claude-otel-leaderboard.md
src/claude_leaderboard/: database.py  main.py  otlp_parser.py
src/claude_otel/: __init__.py  database.py  main.py  otlp_parser.py
tests/: __init__.py  test_database.py  test_e2e.py  test_main.py  test_otlp_parser.py
