[project]
name = "claude-otel"
version = "0.1.0"
description = "Claude Code OpenTelemetry Leaderboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "uvicorn>=0.44.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/claude_otel"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
